# practice_checklist

./: .gitignore  Cargo.toml
backend/basic/todoapp/: Cargo.toml  README.md
backend/basic/todoapp/.sqlx/: query-25b1370008675c1dd4d09500682c939ec4a5d449bc747980db1eaf372d60c990.json  query-672c2592803b0c68ba16b7bef9ca3f83f3f569ebd52957eff0e27700fffba733.json  query-74113af153fc9d076c8b89f1aad0d4121eafd5cbc44336b1b310961d2e72cc3e.json  query-807ddccf851da4dfe220a38a6c129ce5be73916298bfb3ad23a56827b360205e.json  query-c4b036a23f9eb5e60636428d132f5ce34e92fd8cc233579d69ce177fbf9b5834.json  query-c69efeb0a2de31a66e1497e440b762df98d2447e52991bc62cba45683ef5fd54.json
backend/basic/todoapp/migrations/: 20250525035807_todoapp.sql
backend/basic/todoapp/src/: main.rs  storage.rs
backend/basic/urlshortener/: Cargo.toml  README.md
backend/basic/urlshortener/.sqlx/: query-12c7d8f8efb2880d9d8ed034dbd41f91bdbea82ee9d3ec0a808f5493896dd58e.json
backend/basic/urlshortener/migrations/: 20250525232009_url.sql
backend/basic/urlshortener/src/: main.rs  storage.rs
